--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "node-sass": "^4.13.0",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
+        "react-intersection-observer": "^8.25.1",
         "react-scripts": "3.2.0",
         "typescript": "3.6.4"
     },
