--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "@types/react": "16.9.11",
         "@types/react-dom": "16.9.3",
         "classnames": "^2.2.6",
+        "csv-loader": "^3.0.2",
         "node-sass": "^4.13.0",
+        "papaparse": "^5.1.0",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-intersection-observer": "^8.25.1",
@@ -36,5 +38,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "devDependencies": {}
 }
